# macos-runner-test

./: CMakeLists.txt  main.cpp
.github/workflows/: c-cpp.yml
